# exportify-analysis

./: README.md  main.py  pyproject.toml
data/: 2000's_Pop.csv  3D_Country.csv  50s_housewife_bangers🍸.csv  A_Capella_Tronica.csv  Acoustic.csv  All_Across_This_Land.csv  American_IV_The_Man_Comes_Around.csv  Ancient_History.csv  And_The_War_Came.csv  Angel_Face_(Club_Deluxe).csv  Another_Day,_Another_Time_Celebrating_the_Music_of_'Inside_Llewyn_Davis'.csv  Appaloosa_Bones.csv  Awsome_Mix_Vol._1,_2_&_3.csv  Battle_Hymn_of_the_Early_Riser.csv  Being_So_Normal.csv  Between_The_Breaks_Live!.csv  Bluey.csv  Bones_in_the_Ocean.csv  Candles_In_The_Rain.csv  Causeway_Recordings.csv  Chin_Chin.csv  Cicada_Rhythm.csv  Clean_and_Catchy.csv  Cleopatra.csv  Climate_Vigil_Songs.csv  Colter_Wall.csv  Contemporary_Folk.csv  Country.csv  Danny_Throwbacks.csv  Deadstock_-_A_Shakey_Graves_Day_Anthology.csv  Deceptively_Sad_Songs.csv  Easy_On_My_Eyes.csv  Emotionalism.csv  Feathers_&_Fishhooks.csv  Finer_Things.csv  Fits_Of_Laughter.csv  From_2_to_3.csv  From_Dreams_to_Dust.csv  From_Fresh_Water.csv  Furr.csv  (+64 more)
project/: find_neighbors.py  read.py
