[project]
name = "exportify-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pandas-stubs>=3.0.0.260204",
    "pyarrow>=24.0.0",
    "ruff>=0.15.12",
    "scikit-learn>=1.8.0",
    "ty>=0.0.32",
    "openpyxl>=3.1.5",
]
